增加IRunner接口,World的Componet实现该接口会每帧调用Run方法

--- a/CSharp/Game/Model/Model.csproj
+++ b/CSharp/Game/Model/Model.csproj
@@ -67,6 +67,7 @@
     <Compile Include="FactoryAttribute.cs" />
     <Compile Include="IAssemblyLoader.cs" />
     <Compile Include="IFactory.cs" />
+    <Compile Include="IRunner.cs" />
     <Compile Include="MessageAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Unit.cs" />
