--- a/CSharp/Game/Model/Model.csproj
+++ b/CSharp/Game/Model/Model.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="ACategory.cs" />
     <Compile Include="AConfig.cs" />
+    <Compile Include="AEventAttribute.cs" />
     <Compile Include="BehaviorTree\BehaviorTree.cs" />
     <Compile Include="BehaviorTree\BehaviorTreeFactory.cs" />
     <Compile Include="BehaviorTree\BlackBoard.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="Config\NodeConfig.cs" />
     <Compile Include="Config\ServerInfoConfig.cs" />
     <Compile Include="Config\UnitConfig.cs" />
+    <Compile Include="Env.cs" />
     <Compile Include="EnvKey.cs" />
     <Compile Include="EventAttribute.cs" />
     <Compile Include="EventType.cs" />
@@ -75,6 +77,8 @@
     <Compile Include="IAssemblyLoader.cs" />
     <Compile Include="ICategory.cs" />
     <Compile Include="IConfigLoader.cs" />
+    <Compile Include="IEventAsync.cs" />
+    <Compile Include="IEventSync.cs" />
     <Compile Include="IFactory.cs" />
     <Compile Include="IStart.cs" />
     <Compile Include="IUpdate.cs" />
