--- a/CSharp/Game/Controller/Controller.csproj
+++ b/CSharp/Game/Controller/Controller.csproj
@@ -48,8 +48,9 @@
     <Compile Include="ConfigCategory\NodeCategory.cs" />
     <Compile Include="ConfigCategory\ServerInfoCategory.cs" />
     <Compile Include="ConfigCategory\UnitCategory.cs" />
-    <Compile Include="Event\LogicMessageEvent.cs" />
-    <Compile Include="Event\GateMessageEvent.cs" />
+    <Compile Include="Event\GateRecvServerMessageEvent.cs" />
+    <Compile Include="Event\LogicRecvMessageEvent.cs" />
+    <Compile Include="Event\GateRecvClientMessageEvent.cs" />
     <Compile Include="Factory\UnitFactory.cs" />
     <Compile Include="Message\CMsgLoginEvent.cs" />
     <Compile Include="NodeType.cs" />
