--- a/CSharp/App/Modules/BehaviorTreeModule/BehaviorTreeModule.csproj
+++ b/CSharp/App/Modules/BehaviorTreeModule/BehaviorTreeModule.csproj
@@ -71,6 +71,10 @@
       <HintPath>..\..\..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MongoDB.Bson, Version=2.0.0.828, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\MongoDB.Bson.2.0.0\lib\net45\MongoDB.Bson.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -86,7 +90,6 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TreeInfoViewModel.cs" />
     <Compile Include="AllTreeViewModel.cs" />
     <Compile Include="TreeLayout.cs" />
     <Compile Include="TreeView.xaml.cs">
@@ -105,8 +108,6 @@
       <DependentUpon>NodeDataEditor.xaml</DependentUpon>
     </Compile>
     <Compile Include="NodeType.cs" />
-    <Compile Include="TreeNodeData.cs" />
-    <Compile Include="AllTreeData.cs" />
     <Compile Include="TreeNodeViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
