--- a/CSharp/App/Editor/app.config
+++ b/CSharp/App/Editor/app.config
@@ -36,7 +36,7 @@
     <add key="Port" value="8888" />
     <add key="Account" value="egametang@163.com" />
     <add key="Password" value="163bio1" />
-    <add key="NodePath" value="D:\Source\Egametang\CSharp\NodeProto.txt" />
+    <add key="NodePath" value="D:\Source\SLOL\Program\Unity\Assets\Resources\Config\NodeProto.txt" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.serviceModel>
