1.enet更新版本 2.行为树编辑器增加设定路径功能

--- a/CSharp/App/Editor/app.config
+++ b/CSharp/App/Editor/app.config
@@ -32,34 +32,6 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
   </startup>
   <appSettings>
-    <add key="IP" value="192.168.11.95" />
-    <add key="Port" value="8888" />
-    <add key="Account" value="egametang@163.com" />
-    <add key="Password" value="163bio1" />
-    <add key="NodePath" value="D:\Source\SLOL\Program\Unity\Assets\Resources\Config\TreeProto.txt" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="NodePath" value="D:\Source\SLOL\Program\Unity\Assets\Resources\Config\" />
   </appSettings>
-  <system.serviceModel>
-    <bindings>
-      <netTcpBinding>
-        <binding name="NetTcpBinding_Calculator" />
-      </netTcpBinding>
-    </bindings>
-    <client>
-      <endpoint address="net.tcp://localhost:10000/Calculator/" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_Calculator" contract="Proxy.Calculator" name="NetTcpBinding_Calculator">
-      </endpoint>
-    </client>
-  </system.serviceModel>
-  <system.web>
-    <membership defaultProvider="ClientAuthenticationMembershipProvider">
-      <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
-      </providers>
-    </membership>
-    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
-      <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
-      </providers>
-    </roleManager>
-  </system.web>
 </configuration>
