--- a/CSharp/Game/Model/Model.csproj
+++ b/CSharp/Game/Model/Model.csproj
@@ -84,7 +84,6 @@
     <Compile Include="ICategory.cs" />
     <Compile Include="IConfigLoader.cs" />
     <Compile Include="IRegister.cs" />
-    <Compile Include="IEventAsync.cs" />
     <Compile Include="IEvent.cs" />
     <Compile Include="IFactory.cs" />
     <Compile Include="IStart.cs" />
@@ -93,6 +92,7 @@
     <Compile Include="NodeType.cs" />
     <Compile Include="Opcode.cs" />
     <Compile Include="NumDefine.cs" />
+    <Compile Include="OpcodeHelper.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerType.cs" />
