--- a/CSharp/Game/Model/Model.csproj
+++ b/CSharp/Game/Model/Model.csproj
@@ -49,8 +49,6 @@
     <Compile Include="AConfig.cs" />
     <Compile Include="AEventAttribute.cs" />
     <Compile Include="BehaviorTree\BehaviorTree.cs" />
-    <Compile Include="BehaviorTree\BehaviorTreeFactory.cs" />
-    <Compile Include="BehaviorTree\BlackBoard.cs" />
     <Compile Include="BehaviorTree\Node.cs" />
     <Compile Include="BehaviorTree\NodeAttribute.cs" />
     <Compile Include="Buff.cs" />
@@ -71,8 +69,8 @@
     <Compile Include="ConfigAttribute.cs" />
     <Compile Include="Config\BuffConfig.cs" />
     <Compile Include="Config\GlobalConfig.cs" />
-    <Compile Include="Config\NodeConfig.cs" />
     <Compile Include="Config\ServerInfoConfig.cs" />
+    <Compile Include="Config\TreeConfig.cs" />
     <Compile Include="Config\UnitConfig.cs" />
     <Compile Include="Env.cs" />
     <Compile Include="EnvKey.cs" />
@@ -89,7 +87,7 @@
     <Compile Include="IStart.cs" />
     <Compile Include="IUpdate.cs" />
     <Compile Include="MessageAttribute.cs" />
-    <Compile Include="NodeType.cs" />
+    <Compile Include="BehaviorTree\NodeType.cs" />
     <Compile Include="Opcode.cs" />
     <Compile Include="NumDefine.cs" />
     <Compile Include="OpcodeHelper.cs" />
