--- a/CSharp/App/Editor/Packages.config
+++ b/CSharp/App/Editor/Packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="NLog" version="4.1.0" targetFramework="net452" />
   <package id="Prism" version="5.0.0" targetFramework="net45" />
   <package id="Prism.Composition" version="5.0.0" targetFramework="net45" />
   <package id="Prism.Interactivity" version="5.0.0" targetFramework="net45" />
